--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -10,10 +10,10 @@
             <div class="col-md-12 pt-5 pt-md-0">
                 <div class="innerHeader-info">
 
-                    <h2 class="white-text">About Us</h2>
+                    <h2 class="white-text">Service Us</h2>
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><i class="fas fa-home"></i> <a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">About Us</li>
+                        <li class="breadcrumb-item active">Service </li>
                     </ul>
                 </div>
             </div>
@@ -28,7 +28,7 @@
         <div class="row justify-content-center">
             <div class="col-md-9 mb-3 ">
 
-                <h2>Title of the Article</h2>
+                <h2>Serivce</h2>
                 <p>Morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
                 ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
                 Mauris Eonec eu ribero sit amet quam egestas semper. Aenean are ultricies mi senectus et netus et malesuada fames ac
