--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %} Our Service {% endblock %}
 {% block content %}
 <header class="inner-header" style="background-image: linear-gradient(rgba(2, 2, 252, 0.6), rgba(37, 117, 208, 0.6)), url({% static 'img/about.jpg' %});">
 
