--- a/hpr/static/css/style.css
+++ b/hpr/static/css/style.css
@@ -770,14 +770,35 @@ clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
 }
 
-.inner-header-info{
-        margin-top: 15%;
+.innerHeader-blog-info{
+        margin-top: 50px;
         text-align: center;
     }
 
 .inner-header-info h2{
     font-size: 2.2rem;
  }
+
+
+ /*** blog section Page **/
+ .inner-header-blog{
+    height: 20vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+}
+
+.inner-header-blog-info{
+        margin-top: 2%;
+        text-align: center;
+    }
+
+.inner-header-blog-info h2{
+    font-size: 2.2rem;
+ }
+
 
 
  /** Inner page **/
