--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light mr-sm-5 ml-sm-5">
-        <img src="{% static 'img/MainLogo.png' %}" class="img-fluid img-logo">
+        <a href="{% url 'index' %}"> <img src="{% static 'img/MainLogo.png' %}" class="img-fluid img-logo"></a>
            
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
