--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -3,52 +3,39 @@
 <footer {% if '/' == request.path %} class="main-footer py-5" {% else %} class="main-footer footer-background py-5" {% endif %}>
 <!-- <footer class="main-footer footer-background py-5" > -->
     <div class="inner-footer pt-5">
-        <nav class="social-navigation d-flex justify-content-center">
-
-            <a href="http://facebook.com">
-                <span class="sr-only">
-                    Facebook
-                </span>
-            </a>
-
-            <a href="http://twitter.com">
-                <span class="sr-only">
-                    Twitter
-                </span>
-            </a>
-
-            <a href="http://youtube.com">
-                <span class="sr-only">
-                    YouTube
-                </span>
-            </a>
-
-
-        </nav>
+        
     </div>
     <div class="about-footer py-4">
         <div class="container">
 
             <div class="row mt-4">
-                <div class="col-lg-4 mb-4">
-                    <h3>About Us</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                        been the
-                        industry's standard dummyLorem Ipsum is simply dummy text sum has been the
-                        industry's standard dummy</p>
-                    <a href="#" class="read-more">→ Read More</a>
-
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <h3>Address</h3>
-                    <p> Block 1 Lot 6 NHA Avenue Phase 5-1 Barangay Dela Paz Antipolo City, Philippines</p>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <h3>Stay In Touch</h3>
-                    <ul>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">FAQ</a></li>
-                    </ul>
+                <div class="footer--container">
+                    <div class="right-col">
+                        <h3>Home Pray Rise</h3>       
+                        <nav class="social-navigation d-flex justify-content-left mt-3">
+    
+                            <a href="http://facebook.com">
+                                <span class="sr-only">
+                                    Facebook
+                                </span>
+                            </a>
+                
+                            <a href="http://youtube.com">
+                                <span class="sr-only">
+                                    YouTube
+                                </span>
+                            </a>
+                        </nav>
+    
+                    </div>
+               
+                    <div class="left-col">
+                        <h3>Stay In Touch</h3>
+                        <ul>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
