--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -22,10 +22,11 @@
             <li {% if 'post' in request.path %} class="nav-item active" {% else %} class="nav-item" {% endif %}>
               <a class="nav-link" href="{% url 'post:post_list' %}">Blog</a>
             </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact">Contact</a>
-              </li>
-            
+           
+            <li {% if 'contacts' in request.path %} class="nav-item active" {% else %} class="nav-item" {% endif %}>
+              <a class="nav-link" href="{% url 'contacts:contact_form' %}">Contact Us</a>
+            </li>
+
           </ul>
 
           <div class="form-group has-search ml-sm-5 mt-2">
